--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -16,8 +16,12 @@
                     <ul class="flex space-x-4">
                         <li><a href="{% url 'carta_restaurante' %}"
                                 class="text-white hover:text-gray-300">Carta</a></li>
-                        <li><a href="{% url 'cargar_plato' %}" class="text-white hover:text-gray-300">Añadir Plato 
-                                </a></li>
+                        <li><a href="{% url 'cargar_plato' %}"
+                                class="text-white hover:text-gray-300">Añadir
+                                Plato
+                            </a></li>
+                            <li><a href="{% url 'visualizar_platos' %}" class="text-white hover:text-gray-300">Listado Platos
+                            </a></li>
                     </ul>
                 </div>
             </div>
